refactor to add pagination and meta and links to all list apis
